# ossify

./: .pre-commit-config.yaml  LICENCE.txt  Makefile  atest.phil  btest.phil  c.phil  d.phil  phild.gram  pyproject.toml  setup.cfg
src/ossify/: grammar.py  main.py  parser.py  phild.gram  tatsu.gram  testutil.py  tokenizer.py
tests/: test_ossify.py  test_simple_tokenizer.py
tests/phil_files/: find_spots.phild
