[tool.poetry]
name = "ossify"
version = "0.1.0"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pegen = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.770"
black = "^19.10b0"
tatsu = "^5.5.0"
colorama = "^0.4.3"

[tool.isort]
# Explicitly black-compatible settings
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

